[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/Jugador.png" type="Texture" id=1]
[ext_resource path="res://player/player_behav.gd" type="Script" id=2]
[ext_resource path="res://player/Archer.png" type="Texture" id=3]
[ext_resource path="res://tools/ShootBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://tools/Score.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Stand"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.99054, 7.36201 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 10.0
anims/Stand = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0883904, 0.514288 )
shape = SubResource( 3 )

[node name="BowSprite" type="Sprite" parent="."]
position = Vector2( -0.250282, 3.08682 )
rotation = 3.14159
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
hframes = 6
vframes = 2

[node name="PositionBow" type="Position2D" parent="."]
position = Vector2( 0.0775528, 2.67572 )

[node name="CameraPlayer" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
drag_margin_left = 0.5
drag_margin_top = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgress" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 39.1996
margin_top = 498.903
margin_right = 435.2
margin_bottom = 551.903

[node name="Score" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="InvTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="start_shooting" from="." to="CanvasLayer/TextureProgress" method="_on_KinematicBody2D_start_shooting"]
[connection signal="stop_shooting" from="." to="CanvasLayer/TextureProgress" method="_on_KinematicBody2D_stop_shooting"]
[connection signal="final_value" from="CanvasLayer/TextureProgress" to="." method="_on_TextureProgress_final_value"]
[connection signal="timeout" from="InvTimer" to="." method="_on_InvTimer_timeout"]
